# F1

./: .gitignore  README.md  delta_time_sector_constrained.py  model_prediction_race_pace.ipynb  normalized_laptime_race_pace_model.pkl  pyproject.toml  race_pace_model.pkl  race_pace_pipeline.pkl  race_pace_scaler.pkl  standardized_race_pace_model.pkl  test_race_pace_model.pkl
2024/Austin/: Austin_Q.ipynb
2024/Baku/: baku_Q.ipynb  baku_fp3.ipynb
2024/Brasil/: Interlagos_FP1.ipynb  Interlagos_SQ.ipynb
2024/Las Vegas/: LasVegas_FP2.ipynb  LasVegas_Q.ipynb  LasVegas_R.ipynb
2024/Miami/: Miami_Q.ipynb  Miami_R.ipynb
2024/Qatar/: Qatar_FP1.ipynb  Qatar_R.ipynb  Qatar_SRace.ipynb
2024/Singapore/: Singapore_FP1.ipynb  Singapore_FP2.ipynb
2025/Australia/: Australia_FP1.ipynb  Australia_FP2.ipynb  Australia_FP3.ipynb  Australia_Q.ipynb  Australia_compare_FP2_Q_2025.ipynb
2025/Austria/: Austria_FP1.ipynb  Austria_Q.ipynb  Austria_R.ipynb
2025/Bahrein/: Bahrein_FP1.ipynb  Bahrein_FP2.ipynb  Bahrein_FP3.ipynb  Bahrein_Q.ipynb  (+2 more)
Austin/: Austin_23_24_Q.ipynb  Austin_23_24_R.ipynb  Austin_FP1.ipynb  Austin_Q.ipynb  Austin_R.ipynb  Austin_Sprint.ipynb
Baku/: baku_Q.ipynb  baku_fp2.ipynb  baku_fp3.ipynb  baku_race.ipynb
Brasil/: Interlagos_Sprint.ipynb
Las Vegas/: LasVegas_FP1.ipynb  LasVegas_FP2.ipynb  test_lap.csv
Qatar/: Qatar_SQ.ipynb  Qatar_SRace.ipynb
Singapore/: Singapore_FP1.ipynb  Singapore_FP2.ipynb  Singapore_FP3.ipynb  Singapore_Q.ipynb  Singapore_R.ipynb  race_pace_model.pkl
src/: API_REFERENCE.md  analyze_live_snapshot.py  live_telemetry.py
(+148 files in other folders)
