[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1analytics"
version = "0.1.0"
description = "F1 telemetry & analysis tools"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastf1>=3.4",
    "matplotlib>=3.6",
    "pandas>=1.5",
    "numpy>=1.22",
    "scipy>=1.9",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]